<resources>
    <string name="app_name">Traveller</string>
    <string name="home">Home</string>
    <string name="my_trip">My Trip</string>
    <string name="message">Message</string>
    <string name="me">Me</string>
    <string name="title_recommendation">Recommendation Places</string>
    <string name="my_traveller">My Traveller</string>
    
    <string name="culture">Culture</string>
    <string name="outdoor">Outdoor</string>
    <string name="souvenir">Souvenir</string>
    <string name="culinary">Culinary</string>

    <string name="see_all">See all</string>

    <string name="about_place">About This Place</string>
    <string name="location">Location</string>
    <string name="review">Review</string>
    <string name="find_traveller">Find Traveler</string>
    <string name="overview">Overview</string>

    <string name="message_person">Send Message</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="write_review">Write Review</string>
    <string name="edit_find_traveler_list">Edit Find Traveler List</string>
    <string name="name">Name</string>

    <string name="regis_success">Registration Success</string>
    <string name="email_used">Email Not Available</string>

    <string name="valid_email">Valid Email</string>
    <string name="invalid_email">Invalid Email</string>

    <string name="failed_login">Wrong Email or Password</string>
    <string name="success_login">Login Success</string>
    <string name="submit">Submit</string>
    <string name="title_review">Title Review</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
</resources>
