<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@android:color/transparent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/imgViewBg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                tools:ignore="ContentDescription"
                android:scaleType="centerCrop" />
        </RelativeLayout>

        <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:paddingTop="@dimen/small_gap"
                android:paddingBottom="@dimen/tiny_gap"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:paddingTop="@dimen/pad_btn_25"
                    style="?android:attr/buttonBarButtonStyle"
                    android:paddingBottom="@dimen/pad_btn_25"
                    android:layout_marginEnd="@dimen/tiny_gap"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:gravity="center_horizontal"
                    android:id="@+id/btnCulture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_with_white_bg_color"
                    android:text="@string/culture"
                    android:drawableTop="@mipmap/ic_launcher_culture" />

                <Button
                    android:paddingTop="@dimen/pad_btn_25"
                    style="?android:attr/buttonBarButtonStyle"
                    android:paddingBottom="@dimen/pad_btn_25"
                    android:layout_marginEnd="@dimen/tiny_gap"
                    android:textAllCaps="false"
                    android:gravity="center_horizontal"
                    android:id="@+id/btnOutdoor"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_with_white_bg_color"
                    android:text="@string/outdoor"
                    android:drawableTop="@mipmap/ic_launcher_outdoor" />
            </TableRow>

            <TableRow
                style="?android:attr/buttonBarStyle"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/tiny_gap"
                android:paddingBottom="@dimen/small_gap"
                android:layout_weight="1">

                <Button
                    android:paddingTop="@dimen/pad_btn_25"
                    style="?android:attr/buttonBarButtonStyle"
                    android:paddingBottom="@dimen/pad_btn_25"
                    android:layout_marginEnd="@dimen/tiny_gap"
                    android:textAllCaps="false"
                    android:gravity="center_horizontal"
                    android:id="@+id/btnSouvenir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_with_white_bg_color"
                    android:text="@string/souvenir"
                    android:drawableTop="@mipmap/ic_launcher_shopping" />

                <Button
                    android:paddingTop="@dimen/pad_btn_25"
                    style="?android:attr/buttonBarButtonStyle"
                    android:paddingBottom="@dimen/pad_btn_25"
                    android:layout_marginEnd="@dimen/tiny_gap"
                    android:textAllCaps="false"
                    android:gravity="center_horizontal"
                    android:id="@+id/btnCulinary"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_with_white_bg_color"
                    android:text="@string/culinary"
                    android:drawableTop="@mipmap/ic_launcher_culinary" />
            </TableRow>

    </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/normal_pad_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/normal_pad_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_recommendation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btnSeeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/normal_pad_margin"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_with_white_bg_color"
                    android:clickable="true"
                    android:gravity="right"
                    android:paddingLeft="@dimen/normal_pad_margin"
                    android:text="@string/see_all"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvRecommendPlace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transcriptMode="disabled">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
