<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgPlaceDetail"
            android:layout_width="match_parent"
            tools:ignore="ContentDescription"
            android:layout_height="150dp"
            app:srcCompat="@drawable/yoja_min"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_pad_margin"
            android:layout_marginEnd="@dimen/normal_pad_margin">

            <TextView
                android:id="@+id/titlePlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_marginBottom="@dimen/tiny_pad_margin"
                android:layout_below="@id/titlePlace"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:progressTint="@color/gold"
                android:numStars="5"
                android:stepSize="0.1" />

            <TableRow
                android:id="@+id/categoryGroup"
                android:layout_below="@id/ratingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageView2"
                    tools:ignore="ContentDescription"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:srcCompat="@mipmap/ic_launcher_culture" />

                <ImageView
                    android:id="@+id/imageView3"
                    tools:ignore="ContentDescription"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:srcCompat="@mipmap/ic_launcher_culture" />

                <ImageView
                    android:id="@+id/imageView4"
                    tools:ignore="ContentDescription"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:srcCompat="@mipmap/ic_launcher_culture" />

                <ImageView
                    android:id="@+id/imageView5"
                    tools:ignore="ContentDescription"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:srcCompat="@mipmap/ic_launcher_culture" />

                <ImageView
                    android:id="@+id/imageView6"
                    tools:ignore="ContentDescription"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:srcCompat="@mipmap/ic_launcher_culture" />

                <ImageView
                    android:id="@+id/imageView7"
                    tools:ignore="ContentDescription"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:srcCompat="@mipmap/ic_launcher_culture" />
            </TableRow>

            <TextView
                android:id="@+id/titleAboutPlace"
                android:layout_below="@id/categoryGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_place"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/normal_pad_margin"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/aboutPlace"
                android:layout_below="@id/titleAboutPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_pad_margin"
                tools:text="Candi borobudur merupakan monumen dari abad lampau dimana yang mendirikan adalah Candi borobudur merupakan monumen dari abad lampau dimana yang mendirikan adalah Candi borobudur merupakan monumen dari abad lampau dimana yang mendirikan adalah "/>


            <TextView
                android:id="@+id/titleLocation"
                android:layout_below="@id/aboutPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/normal_pad_margin"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imgLocation"
                android:layout_below="@id/titleLocation"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/small_pad_margin"
                tools:ignore="ContentDescription"
                android:layout_height="150dp"
                app:srcCompat="@drawable/yoja_min"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/titleFindTraveler"
                android:layout_marginTop="@dimen/normal_pad_margin"
                android:layout_below="@id/imgLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_traveller"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_toStartOf="@id/btnSeeAll"
                android:layout_alignParentStart="true"
                android:textStyle="bold"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvFindTraveller"
                android:layout_marginTop="@dimen/small_pad_margin"
                android:layout_below="@id/titleFindTraveler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_pad_margin"/>

            <TextView
                android:id="@+id/btnSeeAllFindTraveler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_without_color_bg"
                android:clickable="true"
                android:gravity="right"
                android:text="@string/see_all"
                android:textAlignment="gravity"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_above="@id/rvFindTraveller"
                android:layout_alignParentEnd="true"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/titleReview"
                android:layout_below="@id/rvFindTraveller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvReview"
                android:layout_marginTop="@dimen/small_pad_margin"
                android:layout_below="@id/titleReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/btnSeeAllReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/rvReview"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/normal_pad_margin"
                android:text="@string/see_all"
                android:textAlignment="gravity"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="15sp"
                android:background="@drawable/ripple_without_color_bg"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
